--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -1,73 +1,101 @@
-<p>
-    The Appwrite SDKs' Offline Support allows your client apps to continue functioning without an internet connection. Your users' mobile devices frequently encounter situations where internet access becomes unstable or temporarily unavailable, like when going through tunnels, getting on airplanes and subways, or going in and out of Wi-Fi range. Offline Support helps your app gracefully handle these real-life situations and keeps your users engaged.
-</p>
+<?php
 
-<h2>When Should I Enable Offline Support?</h2>
-<p>
-    You should consider enabling Offline Support if you expect the device running your application to experience short periods without a network connection, like going on an airplane or through a tunnel. Offline Support can't help you if the app's data needs to remain up to date with frequent updates or if write requests need to be processed immediately. If you expect your app to be offline for days or weeks at a time, you may also need to find alternative solutions.
-</p>
+use Appwrite\Utopia\View;
 
-<h2>Enable Offline Support</h2>
+?>
 
 <p>
-    Offline Support can be enabled by setting <code>setOffilnePersistency</code> to true on your SDK's client.
+    Offline Support allows your client apps to continue functioning without an internet connection. Mobile devices frequently encounter situations where internet access becomes unstable or temporarily unavailable, like going through tunnels, getting on airplanes and subways, or going in and out of Wi-Fi range. Offline Support keeps your users engaged when transitioning through these real-life situations.
 </p>
+
+<h2><a href="/docs/offline#when-should-i-enable-offline" id="when-should-i-enable-offline">When Should I Enable Offline Support?</a></h2>
+<p>
+    You should consider enabling Offline Support if you expect the device running your application to experience short periods without a network connection, like going on an airplane or through a tunnel.
+</p>
+<p>
+  Offline Support can't help you if the app's data needs to remain up to date with frequent updates or if write requests need to be processed immediately. If you expect your app to be offline for days or weeks, you may need to find alternative solutions.
+</p>
+
+<h2><a href="/docs/offline#enable-offline" id="enable-offline">Enable Offline Support</a></h2>
 
 <div class="notice">
-  <h2>Adding Offline Support to Existing Projects</h2>
-  <p>Enabling Offline Support introduces breaking changes to the behavior of Client SDKs. Asynchronous operations may not resolve until the device is online again. Existing projects will have to be updated.</p>
-  <p><a href="#async-operation">Learn more about asynchronous operations</a></p>
+<h3>Breaking Changes</h3>
+<p>Enabling Offline Support introduces breaking changes to the asynchronous operation behavior of Client SDKs. <b>Existing projects must be updated.</b></p>
+<p><a href="docs/offline#async-operation">Learn more about asynchronous operations</a></p>
 </div>
+
+<h3>Toggle Persistency</h3>
+<p>
+    You can enable Offline Support by setting <code>setOffilnePersistency</code> to true on your SDK's client.
+</p>
 
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
   <pre class="line-numbers"><code class="prism language-dart" data-prism>client.setOfflinePersistency(status: true);</code></pre>
 </div>
+
+<h3>Configure Cache</h3>
 <p>
-    Offline Support will cache all read request in a <a href="https://en.wikipedia.org/wiki/Cache_replacement_policies#LRU" target="_blank" rel="noopener">Least Recently Used (LRU)</a> cache, so the information can remain available even with no internet connection. The LRU cache defaults to a size of 16MB and can be configured using the <code>setOfflineCacheSize</code> method.
+    Offline Support will cache all read requests in a <a href="https://en.wikipedia.org/wiki/Cache_replacement_policies#LRU" target="_blank" rel="noopener">Least Recently Used (LRU)</a> cache, so the information can remain available without internet connection. The LRU cache defaults to 16MB and can be configured using the <code>setOfflineCacheSize</code> method.
 </p>
 
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
   <pre class="line-numbers"><code class="prism language-dart" data-prism>client.setOfflineCacheSize(40000);</code></pre>
 </div>
 
-<h2 href="#async-operation" id="async-operation">Asynchronous Operation</h2>
+<h2><a href="/docs/offline#async-operation" id="async-operation">Asynchronous Operation</a></h2>
 <p>
-    When Offline Support is enabled, asynchronous write operations only resolve after the server accepts the request. Requests made with the Client SDK may block code execution until network connection is available again.
+    When Offline Support is enabled, write operations only resolve after the server accepts the request. Requests made with the Client SDK may block code execution until network connection is available again.
 </p>
+
+<p>
+    You should optimistically update your app's local state after a write operation. Once you're online again, the write will be synced with your Appwrite project, which will be fetched when you app restarts in the future.
+</p>
+
+<?php
+$image = new View(__DIR__.'/../general/image.phtml');
+    echo $image
+        ->setParam('srcLight', '/images-ee/docs/offline-writes-uml-light.png')
+        ->setParam('srcDark', '/images-ee/docs/offline-writes-uml-light.png')
+        ->setParam('alt', 'Function settings page.')
+        ->setParam('description', 'Function settings page.')
+        ->render();
+?>
 [TODO: Show UML diagram]
 
+<h3>Example</h3>
 <p>
     For example, the code example below will <b>block code execution</b> when the device is offline.
 </p>
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
-  <pre class="line-numbers"><code class="prism language-dart" data-prism>  void blockingSubmitTodo() async {
-    if (inputController.text.isEmpty || isLoading) return;
-    final messenger = ScaffoldMessenger.of(context);
-    final newTodo = Todo(
-      content: inputController.text,
-      id: ID.unique(),
+  <pre class="line-numbers"><code class="prism language-dart" data-prism>void blockingSubmitTodo() async {
+  if (inputController.text.isEmpty || isLoading) return;
+  final messenger = ScaffoldMessenger.of(context);
+  final newTodo = Todo(
+    content: inputController.text,
+    id: ID.unique(),
+  );
+
+  try {
+    // THIS BLOCKS EXECUTION WHEN OFFLINE
+    await _databases.createDocument(
+      databaseId: '[DATABASE_ID]',
+      collectionId: '[COLLECTION_ID]',
+      documentId: newTodo.id,
+      data: {
+        "content": newTodo.content,
+        "isComplete": newTodo.isComplete,
+      },
     );
+    inputController.text = '';
+    todos.add(newTodo);
+  } catch (e) {
+    // ... handle errors
+  }
 
-    try {
-      await _databases.createDocument(
-        databaseId: '[DATABASE_ID]',
-        collectionId: '[COLLECTION_ID]',
-        documentId: newTodo.id,
-        data: {
-          "content": newTodo.content,
-          "isComplete": newTodo.isComplete,
-        },
-      );
-      inputController.text = '';
-      todos.add(newTodo);
-    } catch (e) {
-      messenger.showSnackBar(createErrorSnackBar(e.toString()));
-    }
-
-    setState(() {
-      isLoading = false;
-    });
-  }</code></pre>
+  setState(() {
+    isLoading = false;
+  });
+}</code></pre>
 </div>
 
 <p>
@@ -83,6 +111,7 @@
       id: ID.unique(),
     );
 
+    // This won't block execution, but will still allow error handling.
     _databases.createDocument(
       databaseId: '[DATABASE_ID]',
       collectionId: '[COLLECTION_ID]',
@@ -92,8 +121,7 @@
         "isComplete": newTodo.isComplete,
       },
     ).catchError((e) {
-      messenger.showSnackBar(createErrorSnackBar(e.toString()));
-      todos.remove(newTodo);
+      // ... handle errors
     });
 
     setState(() {
@@ -104,17 +132,18 @@
   }</code></pre>
 </div>
 
-<h2>Conflict Resolution</h2>
+<h2><a href="/docs/offline#conflict-resolution" id="conflict-resolution">Conflict Resolution</a></h2>
 <p>
-    With Offline Support enabled, your app can continue sending requests to Appwrite APIs while offline through a cache when offline. Read requests will be fetched from the local cached data, and write requests will be queued and executed once the device is online again. This can lead to write conflicts when the device is online again.
-</p>
-<p>
-    Document updates made while your device is offline will be queued locally with a timestamp. When your device comes online, Appwrite will compare the timestamps of local updates with the timestamp of the remote document, accepting the <b>latest version</b>. Appwrite will reject a document update if the remote document been updated later than the locally queued update. 
+  With Offline Support enabled, your app can continue sending requests to Appwrite APIs while offline through a cache when offline. Read requests will be fetched from the locally cached data. Write requests will be queued and executed once the device is online again. This can lead to conflicts if another device makes a different change.
 </p>
 
+<h3>How Appwrite Handles Offline Writes</h3>
+
 <p>
-    Additional considerations need to be considered when updating data based on the current value, such as incrementing a counter or appending values to then end of a paragraph. The default conflict resolution behavior may result in incorrect updates and writes. Consider disabling these operations while offline or use Appwrite Functions to implement logic to resolve conflicts.
+    Document updates made while your device is offline will be queued locally with a timestamp. When your device comes online, Appwrite will use the timestamps to accept the <b>latest version</b> of the document. Appwrite will reject a document update if the remote document has been updated later than the local document. 
 </p>
 
-
-
+<h3>Special Cases</h3>
+<p>
+    Additional considerations need to be considered when updating data based on the current value, such as incrementing a counter or appending values to the end of a paragraph. The default conflict resolution behavior may result in incorrect updates and writes. Consider disabling these operations while offline or using Appwrite Functions to implement logic to resolve conflicts.
+</p>
