--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -200,7 +200,7 @@ File content.
     </p>
 
     <p>
-        For example, for the input tag <code><?php echo htmlentities('<input type="file" id="uploader" multiple />'); ?></code>, you would call create file like this:
+        For example, for the input tag <code><?php echo htmlentities('<input type="file" id="uploader" />'); ?></code>, you would call create file like this:
     </p>
     <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
         <pre class="line-numbers"><code class="prism language-javascript" data-prism>const promise = storage.createFile(
