--- a/app/views/docs/command-line-ci.phtml
+++ b/app/views/docs/command-line-ci.phtml
@@ -35,7 +35,7 @@ The Appwrite CLI can be used in a non-interactive and headless manner, without s
 </div>
 
 
-<p>You can deploy databases, collections, and teams non-interactively in a similar way by using the <code>--all</code> and <code>--yes</code> option.</p>
+<p>You can deploy databases, collections, buckets and teams non-interactively in a similar way by using the <code>--all</code> and <code>--yes</code> option.</p>
 <p>Deploy all databases and collections:</p>
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy collection --all --yes</code></pre>
