Fix typo in rest documentation

--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -301,7 +301,7 @@ read("user:627a958ded6424a98a9f")
 <h2><a href="/docs/rest#unique-id" id="unique-id">Unique ID</a></h2>
 
 <p>
-Appwrite's SDKs have a helper <code>ID.unqiue()</code> to generate unique IDs. When using Appwrite without an SDK, pass the string <code>"unique()"</code> into the ID parameter.
+Appwrite's SDKs have a helper <code>ID.unique()</code> to generate unique IDs. When using Appwrite without an SDK, pass the string <code>"unique()"</code> into the ID parameter.
 </p>
 
 <h2><a href="/docs/rest#query" id="query">Query Methods</a></h2>
