Ensure buckets and teams are added everywhere

--- a/app/views/docs/command-line-commands.phtml
+++ b/app/views/docs/command-line-commands.phtml
@@ -1,4 +1,4 @@
-<p>Other than commands to create and deploy collections and functions, the Appwrite CLI can be used as a Server SDK as well. The Appwrite CLI has a command for every Server API endpoint.</p>
+<p>Other than commands to create and deploy databases, collections, functions, teams, and buckets, the Appwrite CLI can be used as a Server SDK as well. The Appwrite CLI has a command for every Server API endpoint.</p>
 
 <p>Commands follows the following general syntax:</p>
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
@@ -22,11 +22,11 @@
     </tr>
     <tr>
         <td><code>init</code></td>
-        <td>The init command helps you initialize your Appwrite project, functions, and collections.</td>
+        <td>The init command helps you initialize your Appwrite project, databases, collections, functions, teams, and buckets.</td>
     </tr>
     <tr>
         <td><code>deploy</code></td>
-        <td>The deploy command provides a convenient wrapper for deploying your functions and collections.</td>
+        <td>The deploy command provides a convenient wrapper for deploying your databases, collections, functions, teams, and buckets.</td>
     </tr>
     <tr>
         <td><code>logout</code></td>
