--- a/app/views/docs/command-line-deployment.phtml
+++ b/app/views/docs/command-line-deployment.phtml
@@ -152,7 +152,7 @@ The Apprite CLI allows you to create and deploy collections and functions to you
         <tr>
             <td><code>schedule</code></td>
             <td>string</td>
-            <td>Execution schedule for the function as a <a href="https://en.wikipedia.org/wiki/Cron" target="_blank" rel="noopener">cron expression</a>.</td>
+            <td>Execute schedule for the function. <a href="/docs/functions#scheduled-execution">Learn more about scheduled executions</a>.</td>
         </tr>
         <tr>
             <td><code>timeout</code></td>
