--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -92,6 +92,13 @@ $cols = [
                     <li><a href="/docs/databases">Databases</a></li>
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
+                    <li>
+                        <a href="/docs/authentication"><i class="icon-right-dir"></i> Authentication</a>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-server" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Security</a></li>                                                
+                        </ul>
+                    </li>
                     <li><a href="/docs/functions">Functions</a></li>
                 </ul>
 
