--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -84,8 +84,8 @@
     Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users only have access to certain information based on the permissions. With Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. This access is consistent across access to these items in relation to document access, file access, and real-time events.
 </p>
 
-<h2><a href="/docs/authentication-security#password-history" id="password-history"></a>Password History</h2>
+<h2><a href="/docs/authentication-security#password-history" id="password-history">Password History</a></h2>
 [TODO: @dlohani please offer some detailed explanation here]
 
-<h2><a href="/docs/authentication-security#password-dictionary" id="password-dictionary"></a>Password Dictionary</h2>
+<h2><a href="/docs/authentication-security#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
 [TODO: @dlohani please offer some detailed explanation here]
